--- a/14/index.html
+++ b/14/index.html
@@ -1,15 +1,10 @@
 <!doctype html>
 <html>
   <head>
-    <title>Cursor</title>
-    <style>
-      #c {position: absolute; cursor: crosshair; width: 100%; height: 100%; }
-    </style>
+    <title></title>
     <script src="script.js"></script>
   </head>
   <body>
-    <div id="c">
-      <div id="s">This is a sentence.</div>
-    </div>
+    
   </body>
 </html>
