--- a/14/index.html
+++ b/14/index.html
@@ -4,7 +4,8 @@
     <title></title>
     <script src="script.js"></script>
   </head>
-  <body>
-    
+  <body style="position: absolute; width: 100%; height: 100%; ">
+    <img src="../15/correct.gif" id="image">
+    <a>aa</a>
   </body>
 </html>
